jenkins_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - jenkins.americanportfolios.org
    secretName: letsencrypt-prod-jenkins
  rules:
  - host: jenkins.americanportfolios.org
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
